<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">

        <LinearLayout
            android:id="@+id/linear_layout_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/selected_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/month_and_year"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="@dimen/dp_10"
                android:backgroundTint="@color/colorWhite"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_drop_down_white_24dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@drawable/theme_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_spinner">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/header_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/header_bgn"
                android:padding="@dimen/dp_10">

                <LinearLayout
                    android:id="@+id/net_income_layout"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/net_income_head"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/net_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="@dimen/sp_20"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/net_expanse_layout"
                   android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/net_expanse_head"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expanse"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/net_expanse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="@dimen/sp_20"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/net_balance_layout"
                   android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/net_balance_head"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/balance"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/net_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="@dimen/sp_20"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:layout_below="@id/header_home"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_16">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10">


                        <TextView
                            android:id="@+id/expanse_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_an_expanse"
                            android:textStyle="bold"
                            android:textSize="@dimen/sp_20"/>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/expanse_amt"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/amount_debited"
                            android:textSize="@dimen/sp_16"
                            android:layout_below="@id/expanse_head"/>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/expanse_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:textSize="@dimen/sp_16"
                            android:layout_below="@id/expanse_amt"/>

                        <TextView
                            android:id="@+id/expanse_category_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:textStyle="bold"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginStart="6dp"
                            android:layout_below="@id/expanse_desc"/>

                        <TextView
                            android:id="@+id/expanse_category_val"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/general"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginStart="@dimen/dp_6"
                            android:layout_below="@id/expanse_desc"
                            android:layout_toEndOf="@id/expanse_category_head"/>

                        <TextView
                            android:id="@+id/expanse_date_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textStyle="bold"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginStart="@dimen/dp_6"
                            android:layout_below="@id/expanse_category_head"/>


                        <TextView
                            android:id="@+id/expanse_date_val"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/today_s_date"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginStart="@dimen/dp_6"
                            android:layout_below="@id/expanse_category_head"
                            android:layout_toEndOf="@id/expanse_date_head"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/income_card"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">


                        <TextView
                            android:id="@+id/income_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_income"
                            android:textStyle="bold"
                            android:textSize="@dimen/sp_20"/>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/income_amt"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/amount_credited"
                            android:textSize="@dimen/sp_16"
                            android:layout_below="@id/income_head"/>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/income_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:textSize="@dimen/sp_16"
                            android:layout_below="@id/income_amt"/>

                        <TextView
                            android:id="@+id/income_category_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            android:textStyle="bold"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginStart="@dimen/dp_6"
                            android:layout_below="@id/income_desc"/>

                        <TextView
                            android:id="@+id/income_category_val"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/general"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginStart="@dimen/dp_6"
                            android:layout_below="@id/income_desc"
                            android:layout_toEndOf="@id/income_category_head"/>

                        <TextView
                            android:id="@+id/income_date_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textStyle="bold"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginStart="@dimen/dp_6"
                            android:layout_below="@id/income_category_head"/>


                        <TextView
                            android:id="@+id/income_date_val"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/today_s_date"
                            android:textSize="@dimen/sp_16"
                            android:layout_marginStart="@dimen/dp_6"
                            android:layout_below="@id/income_category_head"
                            android:layout_toEndOf="@id/income_date_head"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>